[tool.poetry]
name = "exploding-kittens"
packages = [
    { include = "exploding_kittens" }
]
version = "0.1.0"
description = "A distributed implementation of the multiplayer game Exploding Kittens."
readme = "README.md"

[tool.poetry.dependencies]
python =  ">=3.13,<3.14"
pygame = "^2.6.1"
pytest = "^8.4.0"
pymongo = "^4.13.0"
pyinstaller = "^6.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"